Added updated endpoints for error reporting. DAT-1027
